fix content jump issue

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -28,7 +28,7 @@ h3 {
 /*--------------------------------------------*/
 
 .large-12.columns {
-    background: url('../Images/Background/Colin-Colin-0037BW.jpg') no-repeat center center;
+    background: url('../Images/Background/Colin-Colin-0024BW.jpg') no-repeat center center;
     background-size: cover;
     background-attachment: fixed;
     margin: 0 auto;
@@ -71,9 +71,9 @@ h3 {
 }
 
 h3.intro-title {
-	font-size: 1em;
+	font-size: 1.5em;
 	margin: 0 auto;
-	letter-spacing: 5px;
+	letter-spacing: 3px;
 }
 
 
@@ -175,6 +175,18 @@ nav a {
 /*--------------------------------------------*/
 /*                    GALLERY                 */
 /*--------------------------------------------*/
+
+.placeholder {
+	width: 100%;
+	height: 100px;
+	display: none;
+}
+
+.placeholder-visible {
+	display: inline-block;
+	width: 100%;
+	height: 90px;
+}
 
 .large-4.medium-4.small-12.columns {
 	padding: 0;
